--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "e2e tests with cypress",
   "main": "index.js",
   "scripts": {
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "author": "Paweł Pikus",
   "license": "ISC",
