--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skyskanner-tests",
+  "name": "cypress-tests",
   "version": "1.0.0",
   "description": "e2e tests with cypress",
   "main": "index.js",
